@@ -138,7 +138,7 @@
 
     # Base things that are only (mostly) derived from
     [control:widget]
-        debug_border_colour="optional string" #TODO: colour
+        debug_border_color="optional string"
         debug_border_mode="optional unsigned"
         definition="optional identifier"
         help="optional string"
